ForgetPassword Features Added

--- a/DigitalBroker.Application/DigitalBroker.Application.csproj
+++ b/DigitalBroker.Application/DigitalBroker.Application.csproj
@@ -10,4 +10,14 @@
     <ProjectReference Include="..\DigitalBrooker.Domain\DigitalBrooker.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ExtensionMethods\" />
+    <Folder Include="Querirs\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MailKit" Version="4.11.0" />
+    <PackageReference Include="MediatR" Version="12.5.0" />
+  </ItemGroup>
+
 </Project>
