--- a/DigitalBrokker.Infrastructure/DigitalBrokker.Infrastructure.csproj
+++ b/DigitalBrokker.Infrastructure/DigitalBrokker.Infrastructure.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="9.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.4" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.8.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.8.0" />
   </ItemGroup>
@@ -18,6 +19,12 @@
   <ItemGroup>
     <ProjectReference Include="..\DigitalBroker.Application\DigitalBroker.Application.csproj" />
     <ProjectReference Include="..\DigitalBrooker.Domain\DigitalBrooker.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="JSONFiles\appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
