--- a/DigitalBrookerWebApi/appsettings.json
+++ b/DigitalBrookerWebApi/appsettings.json
@@ -9,10 +9,16 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=LAPTOP-NFU692OK\\LOCALDB;Initial Catalog=BrookerDb;Integrated Security=True;Trust Server Certificate=True"
   },
+
   "Jwt": {
     "Secret": "jhaHD2i828UJU8989ewUIHDIuhkaODIKikjHKJKSlafvas",
     "Issure": "https://localhost:7190",
     "Audience": "https://localhost:3000",
     "ExpireTime": 15
+  },
+
+  "SmtpInfo": {
+    "SmtpEmail": "digitalpwesar.realestate@gmail.com",
+    "SmtpPassword": "eqtmbiwjweoumfbv"
   }
 }
