--- a/DigitalBrookerWebApi/appsettings.json
+++ b/DigitalBrookerWebApi/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LAPTOP-NFU692OK\\LOCALDB;Initial Catalog=BrookerDb;Integrated Security=True;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=LAPTOP-NFU692OK\\LOCALDB;Initial Catalog=DigitalBrookerDb;Integrated Security=True;Trust Server Certificate=True"
   },
 
   "Jwt": {
