--- a/DigitalBrooker.Domain/DigitalBrooker.Domain.csproj
+++ b/DigitalBrooker.Domain/DigitalBrooker.Domain.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HotChocolate.Types" Version="15.1.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.4" />
   </ItemGroup>
 
