--- a/DigitalBrookerWebApi/appsettings.json
+++ b/DigitalBrookerWebApi/appsettings.json
@@ -18,7 +18,7 @@
   },
 
   "SmtpInfo": {
-    "SmtpEmail": "digitalpwesar.realestate@gmail.com",
-    "SmtpPassword": "eqtmbiwjweoumfbv"
+    "SmtpEmail": "", //insert your smtp email in this field
+    "SmtpPassword": "" //insert your smtp email password in this field
   }
 }
