--- a/DigitalBrookerWebApi/appsettings.json
+++ b/DigitalBrookerWebApi/appsettings.json
@@ -7,14 +7,14 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LAPTOP-NFU692OK\\LOCALDB;Initial Catalog=DigitalBrookerDb;Integrated Security=True;Trust Server Certificate=True"
+    "DefaultConnection": ""//Insert Your ConnectionString
   },
 
   "Jwt": {
-    "Secret": "jhaHD2i828UJU8989ewUIHDIuhkaODIKikjHKJKSlafvas",
-    "Issure": "https://localhost:7190",
-    "Audience": "https://localhost:3000",
-    "ExpireTime": 15
+    "Secret": "", //Insert your secret key. At least 16 characters long.
+    "Issure": "https://localhost:7190", //insert your local host here.
+    "Audience": "https://localhost:3000", //UI URL. mostly 3000 for javascript
+    "ExpireTime": 15 //in minutes. //insert your expire time in this field as you want
   },
 
   "SmtpInfo": {
