--- a/DigitalBrokker.Infrastructure/JSONFiles/appsettings.json
+++ b/DigitalBrokker.Infrastructure/JSONFiles/appsettings.json
@@ -8,6 +8,6 @@
     "**/platforms"
   ],
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LAPTOP-NFU692OK\\LOCALDB;Initial Catalog=BrookerDb;Integrated Security=True;Trust Server Certificate=True"
+    "DefaultConnection": "" //insert your connection string for design time
   }
 }
